fix: Fix fixture-generator compilation and pin rust toolchain

--- a/.github/workflows/rust-version.yml
+++ b/.github/workflows/rust-version.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        package: [ "aptos", "ethereum" ]
+        package: ["aptos", "ethereum", "fixture-generator"]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@nightly
