--- a/kadena/core/Cargo.toml
+++ b/kadena/core/Cargo.toml
@@ -11,10 +11,10 @@ getset = "0.1.2"
 base64 = "0.22.1"
 uint = "0.9.5"
 chrono = "0.4.38"
-reqwest = { version = "0.12.5", features = ["blocking", "json"] }
-tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
+#reqwest = { version = "0.12.5", features = ["blocking", "json"] }
+#tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
 
-sphinx-sdk = { workspace = true }
+#sphinx-sdk = { workspace = true }
 
 [dev-dependencies]
 merkle-log = { version = "0.1.0", git = "https://github.com/kadena-io/merkle-log-rs.git" }
