--- a/kadena/programs/block-header-hashing/Cargo.toml
+++ b/kadena/programs/block-header-hashing/Cargo.toml
@@ -8,3 +8,8 @@ license = "Apache-2.0"
 [dependencies]
 sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", tag = "v1.0.0" }
 kadena-lc-core = { path = "../../core", package = "kadena-lc-core" }
+
+[patch.crates-io]
+# Sphinx patch
+tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
+sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
