chore: Add dependabot configuration for Rust packages
- Updated the Dependabot configuration for better package management
- Limited the scope of updates for Rust dependencies to minor and patch only
- Set a maximum limit for open pull-requests for the Cargo package ecosystem

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,10 +6,18 @@ updates:
       separator: "-"
     schedule:
       interval: weekly
+    ignore:
+      # Ignore updates from certain packages
+      - dependency-name: "syn" # this is a major update for a pre-1.0 package
+
     groups:
       rust-dependencies:
         patterns:
           - "*"
+        update-types:
+          - "minor"
+          - "patch"
+
     open-pull-requests-limit: 5
 
   - package-ecosystem: "github-actions"
