--- a/.github/workflows/rust-version.yml
+++ b/.github/workflows/rust-version.yml
@@ -33,12 +33,18 @@ jobs:
         run: |
           sed -i 's/channel = .*/channel = "nightly-${{ env.RUST_VERSION }}"/' rust-toolchain.toml
         working-directory: ${{ github.workspace }}/${{ matrix.package }}
+      - uses: tibdex/github-app-token@v2
+        if: steps.compare-versions.outputs.outdated == 'true'
+        id: generate-token
+        with:
+          app_id: ${{ secrets.TOKEN_APP_ID }}
+          private_key: ${{ secrets.TOKEN_APP_PRIVATE_KEY }}
       # Open PR if Rust version is out of date with latest nightly
       - name: Create Pull Request
         if: steps.compare-versions.outputs.outdated == 'true'
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.REPO_TOKEN }}
+          token: ${{ steps.generate-token.outputs.token }}
           branch: "ci-update-rust-version-${{ matrix.package }}"
           title: "chore: Update `${{ matrix.package }}` Rust version to `nightly-${{ env.RUST_VERSION }}`"
           commit-message: "chore: Update `${{ matrix.package }}` Rust version to `nightly-${{ env.RUST_VERSION }}`"
