--- a/deny.toml
+++ b/deny.toml
@@ -76,6 +76,24 @@ ignore = [
     "RUSTSEC-2024-0013",
     # ansi_term is unmaintained, used by tracing-forest, from sphinx
     "RUSTSEC-2021-0139",
+    # difference is unmaintained, used in move
+    "RUSTSEC-2020-0095",
+    # atty is unmaintained
+    "RUSTSEC-2021-0145",
+    # curve25519-dalek
+    "RUSTSEC-2024-0344",
+    # ed25519-dalek
+    "RUSTSEC-2022-0093",
+    # ouroboros, used in aptos-vm
+    "RUSTSEC-2023-0042",
+    # rsa
+    "RUSTSEC-2023-0071",
+    # serde_cbor is unmaintained
+    "RUSTSEC-2021-0127",
+    # tui is unmaintained
+    "RUSTSEC-2023-0049",
+    # yaml_rust is unmaintained
+    "RUSTSEC-2024-0320",
 ]
 
 # If this is true, then cargo deny will use the git executable to fetch advisory database.
@@ -95,7 +113,6 @@ version = 2
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
 allow = [
     "MIT",
-    "BSL-1.0",
     "0BSD",
     "BSD-2-Clause",
     "BSD-3-Clause",
@@ -120,6 +137,9 @@ confidence-threshold = 0.8
 # aren't accepted for every possible crate as with the normal allow list
 exceptions = [
     # Each entry is the crate and version constraint, and its specific allow list.
+    # Fixed upstream, see https://github.com/aptos-labs/aptos-core/issues/13931
+    # Requires updating to a newer version of `aptos-core`
+    { name = "number_range", version = "0.3.2", allow = ["GPL-3.0"] }
 ]
 
 # Some crates don't have (easily) machine readable licensing information,
