chore: Add `large_futures` clippy lint to xclippy

--- a/ethereum/.cargo/config.toml
+++ b/ethereum/.cargo/config.toml
@@ -21,6 +21,7 @@ xclippy = [
     "-Wclippy::implicit_clone",
     "-Wclippy::inefficient_to_string",
     "-Wclippy::invalid_upcast_comparisons",
+    "-Wclippy::large_futures",
     "-Wclippy::large_stack_arrays",
     "-Wclippy::large_types_passed_by_value",
     "-Wclippy::macro_use_imports",
