--- a/kadena/Cargo.toml
+++ b/kadena/Cargo.toml
@@ -15,10 +15,7 @@ base64 = "0.22.1"
 uint = "0.9.5"
 chrono = "0.4.38"
 sha2 = "0.9"
-tiny-keccak = "2.0.2"
-
-# Crypto dependencies
-bls12_381 = { git = "https://github.com/argumentcomputer/bls12_381.git", branch = "zkvm" }
+#tiny-keccak = "2.0.2"
 
 # Sphinx dependencies
 sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
@@ -28,5 +25,5 @@ sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "
 
 [patch.crates-io]
 # Sphinx patch
-tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
+#tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
 sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
