--- a/docker/k8s/server-primary-deployment.yaml
+++ b/docker/k8s/server-primary-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: server-primary
-          image: lurk-lab/aptos-light-client:latest
+          image: argumentcomputer/aptos-light-client:latest
           imagePullPolicy: IfNotPresent
           command: [ "sh", "-c", "/app/server_primary --addr ${CONTAINER_PRIMARY_ADDR}:${CONTAINER_PRIMARY_PORT} --snd-addr server-secondary:80" ]
           env:
@@ -22,14 +22,9 @@ spec:
               value: "debug"
             - name: CONTAINER_PRIMARY_ADDR
               valueFrom:
-                configMapKeyRef:
-                  name: aptos-config
-                  key: CONTAINER_PRIMARY_ADDR
+                fieldRef:
+                  fieldPath: status.podIP
             - name: CONTAINER_PRIMARY_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: aptos-config
-                  key: CONTAINER_PRIMARY_PORT
+              value: "8080"
           ports:
-            # The port is also set as 6379 in the server-primary-service.yml file, if you change it here, make sure to change it there as well
-            - containerPort: 6379
+            - containerPort: 8080
