--- a/.github/workflows/bump-version-PR.yml
+++ b/.github/workflows/bump-version-PR.yml
@@ -8,6 +8,7 @@ on:
         options:
           - aptos
           - ethereum
+          - kadena
         required: true
         default: 'aptos'
       type:
@@ -44,8 +45,8 @@ jobs:
       - name: Install `tq-rs`
         run: cargo install tq-rs
 
-      # The `release/<aptos|ethereum>-v1.0` branch is always truncated, so that patch version merges still are valid Semver
-      # However, when we make the initial `release/<aptos|ethereum>-v1.0` version bump, we include the full `1.0.0` in `Cargo.toml`
+      # The `release/<aptos|ethereum|kadena>-v1.0` branch is always truncated, so that patch version merges still are valid Semver
+      # However, when we make the initial `release/<aptos|ethereum|kadena>-v1.0` version bump, we include the full `1.0.0` in `Cargo.toml`
       # and the release for clarity
       - name: Set branches
         run: |
@@ -90,6 +91,8 @@ jobs:
             members=$(tq workspace.members -f Cargo.toml | jq -r '. += ["programs/inclusion", "programs/committee-change"] | .[]')
           elif [[ "${{ inputs.light-client }}" == "aptos" ]]; then
             members=$(tq workspace.members -f Cargo.toml | jq -r '. += ["programs/inclusion", "programs/epoch-change"] | .[]')
+          elif [[ "${{ inputs.light-client }}" == "aptos" ]]; then
+            members=$(tq workspace.members -f Cargo.toml | jq -r '. += [""] | .[]')
           else
             echo "Unknown light-client: ${{ inputs.light-client }}. Aborting..."
             exit 1
