--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,7 @@ jobs:
       lc-packages: ${{ steps.get-packages.outputs.lc-packages }}
       aptos: ${{ steps.filter.outputs.aptos }}
       ethereum: ${{ steps.filter.outputs.ethereum }}
+      kadena: ${{ steps.filter.outputs.kadena }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
@@ -33,6 +34,8 @@ jobs:
               - 'aptos/**'
             ethereum:
               - 'ethereum/**'
+            kadena:
+              - 'kadena/**'
             fixture-generator:
               - 'fixture-generator/**'
       - name: Get list of changed packages
@@ -57,7 +60,7 @@ jobs:
       fail-fast: false
       matrix:
         # Parse JSON array containing names of all changed light client packages,
-        # e.g. ['aptos', 'ethereum'] if `aptos` and `ethereum` contain changes.
+        # e.g. ['aptos', 'ethereum', 'kadena'] if `aptos`, `ethereum` and 'kadena' contain changes.
         package: ${{ fromJSON(needs.changes.outputs.lc-packages) }}
     steps:
       - uses: actions/checkout@v4
@@ -85,7 +88,7 @@ jobs:
       fail-fast: false
       matrix:
         # Parse JSON array containing names of all changed packages,
-        # e.g. ['aptos', 'ethereum', 'fixture-generator'] if `aptos` and `ethereum` contain changes.
+        # e.g. ['aptos', 'ethereum', 'kadena'] if `aptos`, `ethereum` and 'kadena' contain changes.
         # We always run 'fixture-generator' clippy tests if it or any light client was changed.
         package: ${{ fromJSON(needs.changes.outputs.packages) }}
     steps:
