chore: Remove superfluous nightly versions

--- a/aptos/light-client/Makefile
+++ b/aptos/light-client/Makefile
@@ -5,7 +5,7 @@ benchmark:
 	RUST_LOG="debug" \
 	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native -C opt-level=3" \
 	SHARD_BATCH_SIZE=0 \
-	cargo +nightly-2024-05-31 bench --features aptos --bench $$bench
+	cargo bench --features aptos --bench $$bench
 
 BENCH ?= e2e
 
@@ -13,4 +13,4 @@ bench-ci:
 	RUST_LOG="info" \
 	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native -C opt-level=3" \
 	SHARD_BATCH_SIZE=0 \
-	cargo +nightly-2024-05-31 bench --features aptos --bench $(BENCH)
+	cargo bench --features aptos --bench $(BENCH)
