--- a/.github/workflows/bump-version-PR.yml
+++ b/.github/workflows/bump-version-PR.yml
@@ -40,9 +40,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: nightly-2024-05-31
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install `tq-rs`
         run: cargo install tq-rs
