--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -11,9 +11,15 @@ runs:
       with:
         go-version: '1.22'
         cache-dependency-path: "**/go.sum"
-    - uses: dtolnay/rust-toolchain@master
+    # Assumes the `fixture-generator` Rust version is reasonably up to date with all of the light clients
+    - name: Get Rust toolchain version
+      shell: bash
+      run: |
+        echo "TOOLCHAIN_VERSION=$(grep -E '^channel\s*=' ./fixture-generator/rust-toolchain.toml | awk -F'"' '{ print $2 }')" | tee -a $GITHUB_ENV
+    - name: Install Rust
+      uses: dtolnay/rust-toolchain@master
       with:
-        toolchain: nightly-2024-05-31
+        toolchain: ${{ env.TOOLCHAIN_VERSION }}
     - uses: Swatinem/rust-cache@v2
       with:
         workspaces: "aptos -> target"
