--- a/ethereum/light-client/Makefile
+++ b/ethereum/light-client/Makefile
@@ -5,12 +5,9 @@ benchmark:
 	RUST_LOG="debug" \
 	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native -C opt-level=3" \
 	SHARD_BATCH_SIZE=0 \
-	cargo bench --bench $$bench
+	cargo bench --features ethereum --bench $$bench
 
 BENCH ?= e2e
 
 bench-ci:
-	RUST_LOG="info" \
-	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native -C opt-level=3" \
-	SHARD_BATCH_SIZE=0 \
-	cargo bench --bench $(BENCH)
+	cargo bench --features ethereum --bench $(BENCH)
