--- a/aptos/proof-server/Cargo.toml
+++ b/aptos/proof-server/Cargo.toml
@@ -22,7 +22,7 @@ aptos-lc-core = { path = "../core" }
 
 # workspace
 anyhow = { workspace = true }
-backoff = { workspace = true }
+backoff = { workspace = true, features = ["tokio"] }
 bcs = { workspace = true }
 chrono = { workspace = true }
 clap = { workspace = true }
