--- a/ethereum/light-client/Cargo.toml
+++ b/ethereum/light-client/Cargo.toml
@@ -7,6 +7,7 @@ license = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
+axum = { workspace = true }
 backoff = { workspace = true, features = ["tokio"] }
 clap = { workspace = true, features = ["derive"] }
 env_logger = { workspace = true }
