--- a/docker/k8s/proof-server/proof-server-deployment.yaml
+++ b/docker/k8s/proof-server/proof-server-deployment.yaml
@@ -28,3 +28,15 @@ spec:
               value: "8080"  # Internal port for the server
           ports:
             - containerPort: 8080  # Ensure this matches CONTAINER_PORT
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            readinessProbe:
+              httpGet:
+                path: /health
+                port: 8080
+              initialDelaySeconds: 15
+              periodSeconds: 10
