--- a/aptos/light-client/Makefile
+++ b/aptos/light-client/Makefile
@@ -2,9 +2,9 @@
 
 benchmark:
 	@read -p "Enter benchmark name: " bench; \
-	RUST_LOG="debug" \
 	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native -C opt-level=3" \
-	SHARD_BATCH_SIZE=0 \
+	SHARD_SIZE=4194304 \
+	SHARD_CHUNKING_MULTIPLIER=256 \
 	cargo bench --features aptos --bench $$bench
 
 BENCH ?= e2e
