--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -80,6 +80,8 @@ jobs:
           # Default benchmark settings optimized for light clients, can be overwritten with `env` input
           echo "RUSTFLAGS='-C target-cpu=native --cfg tokio_unstable -C opt-level=3'" | tee -a $GITHUB_ENV
           echo "SHARD_SIZE=4194304" | tee -a $GITHUB_ENV
+          echo "SHARD_BATCH_SIZE=0" | tee -a $GITHUB_ENV
+          echo "RECONSTRUCT_COMMITMENTS=false" | tee -a $GITHUB_ENV
           echo "SHARD_CHUNKING_MULTIPLIER=256" | tee -a $GITHUB_ENV
           echo "SNARK=1" | tee -a $GITHUB_ENV
 
