--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -73,8 +73,12 @@ jobs:
         uses: ./.github/actions/setup
       - name: Install extra deps
         run: |
-          which pip3
-          pip3 install jtbl
+          sudo apt-get update && sudo apt-get install -y python3-pip
+          pip3 --version
+          pip3 install --break-system-packages jtbl
+          echo 'PATH="/$HOME/.local/bin:$PATH"' >> ~/.profile
+          source ~/.profile
+          jtbl --version
       - name: Set env
         run: |
           # Default benchmark settings optimized for light clients, can be overwritten with `env` input
