--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -76,9 +76,9 @@ jobs:
           sudo apt-get update && sudo apt-get install -y python3-pip
           pip3 --version
           pip3 install --break-system-packages jtbl
-          echo 'PATH="/$HOME/.local/bin:$PATH"' >> ~/.profile
+          echo 'PATH="$HOME/.local/bin:$PATH"' >> ~/.profile
           source ~/.profile
-          jtbl --version
+          which jtbl
       - name: Set env
         run: |
           # Default benchmark settings optimized for light clients, can be overwritten with `env` input
