feat: Add Sha512_256 benchmark sphinx program

--- a/kadena/light-client/Cargo.toml
+++ b/kadena/light-client/Cargo.toml
@@ -6,6 +6,8 @@ repository = { workspace = true }
 license = { workspace = true }
 
 [dependencies]
+sha2 = { workspace = true }
+
 # LC crates
 kadena-lc-core = { path = "../core" }
 kadena-programs = { path = "../kadena-programs" }
