feat: mock data compact header

--- a/kadena/core/Cargo.toml
+++ b/kadena/core/Cargo.toml
@@ -11,3 +11,8 @@ getset = { workspace = true }
 base64 = { workspace = true }
 uint = { workspace = true }
 chrono = { workspace = true }
+thiserror = { workspace = true }
+
+[features]
+default = []
+kadena = []
