--- a/kadena/Cargo.toml
+++ b/kadena/Cargo.toml
@@ -9,12 +9,16 @@ license = "Apache-2.0"
 repository = "https://github.com/argumentcomputer/zk-light-clients"
 
 [workspace.dependencies]
-glob = "0.3.1"
-getset = "0.1.2"
+anyhow = "1.0.86"
 base64 = "0.22.1"
-uint = "0.9.5"
 chrono = "0.4.38"
+getset = "0.1.2"
+glob = "0.3.1"
+serde = "1.0.209"
+serde_json = "1.0.127"
 sha2 = "0.9"
+thiserror = "1.0.63"
+uint = "0.9.5"
 
 # Sphinx dependencies
 sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
