--- a/kadena/Cargo.toml
+++ b/kadena/Cargo.toml
@@ -13,7 +13,7 @@ anyhow = "1.0.86"
 axum = "0.7.5"
 backoff = "0.4.0"
 base64 = "0.22.1"
-blake2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
+blake2 = "0.10.6"
 chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive"] }
 env_logger = "0.11.5"
@@ -37,3 +37,4 @@ sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "
 [patch.crates-io]
 # Sphinx patch
 sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
+blake2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
