--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -52,11 +52,11 @@ sha2 = "0.9"
 thiserror = "1.0.58"
 tiny-keccak = "2.0.2"
 url = "2.5.0"
-sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
-sphinx-sdk = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev", features = ["plonk"] }
-sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
-sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
-sphinx-prover = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
+sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
+sphinx-sdk = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44", features = ["plonk"] }
+sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
+sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
+sphinx-prover = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
 tokio = "1.37"
 tokio-stream = "0.1"
 alloy-sol-types = "0.7.2"
