chore: Point all deps to Sphinx PR branch, rebuild artifacts

--- a/aptos/programs/benchmarks/signature-verification/Cargo.toml
+++ b/aptos/programs/benchmarks/signature-verification/Cargo.toml
@@ -9,6 +9,7 @@ license = "Apache-2.0"
 aptos-lc-core = { path = "../../../core", package = "aptos-lc-core", default-features = false }
 sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
 sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
+sphinx-lib = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
 
 [patch.crates-io]
 # Sphinx patch
