--- a/kadena/Cargo.toml
+++ b/kadena/Cargo.toml
@@ -29,10 +29,10 @@ tokio = "1.39.2"
 uint = "0.9.5"
 
 # Sphinx dependencies
-sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
-sphinx-sdk = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev", features = ["plonk"] }
-sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
-sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
+sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
+sphinx-sdk = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44", features = ["plonk"] }
+sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
+sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
 
 [patch.crates-io]
 # Sphinx patch
