--- a/kadena/programs/benchmarks/sha512-caller/Cargo.toml
+++ b/kadena/programs/benchmarks/sha512-caller/Cargo.toml
@@ -7,5 +7,6 @@ repository = "https://github.com/argumentcomputer/zk-light-clients"
 resolver = "2"
 
 [dependencies]
-sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
+sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
+sphinx-lib = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
 sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
