refactor: remove client from dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -65,7 +65,7 @@ RUN apt update && apt install -y openssl libssl-dev
 WORKDIR /app
 
 # Copy only the binaries from the builder stage
-COPY --from=builder /app/$LIGHT_CLIENT/target/release/client /app/$LIGHT_CLIENT/target/release/proof_server ./
+COPY --from=builder /app/$LIGHT_CLIENT/target/release/proof_server ./
 
 # Create group and user
 RUN groupadd execgroup && useradd -m -g execgroup execuser
