--- a/docker/eksctl/cluster-config.yml
+++ b/docker/eksctl/cluster-config.yml
@@ -3,12 +3,12 @@ kind: ClusterConfig
 
 metadata:
   name: proof-server
-  region: us-west-2
+  region: us-east-2
 
 nodeGroups:
   - name: r7iz-metal-nodes
     instanceType: r7iz.metal-32xl
-    desiredCapacity: 3
+    desiredCapacity: 2
     labels:
       instance-type: r7iz.metal-32xl
       environment: production
