refactor: always pull image

--- a/docker/proof-server-chart/values.yaml
+++ b/docker/proof-server-chart/values.yaml
@@ -6,7 +6,7 @@ deployment:
     image:
       repository: ghcr.io/argumentcomputer/ethereum-proof-server
       tag: latest
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     nodeSelector:
       instance-type: r7iz.metal-32xl
   replicas: 1
